--- a/app/app.css
+++ b/app/app.css
@@ -7,11 +7,13 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+    @apply bg-white dark:bg-gray-950;
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
-  }
+    @media (prefers-color-scheme: dark) {
+        color-scheme: dark;
+    }
+
+    margin: 20px;
 }
 
 .page {
@@ -43,17 +45,32 @@ body {
     }
 
     footer {
+        width: 100%;
+        display: flex;
         margin-top: 20px;
+        justify-content: space-around;
+
+        .green {
+            color: green;
+        }
+        .green:hover {
+            border: 1px solid green;
+        }
+
+        .gray {
+            color: gray;
+        }
+        .gray:hover {
+            border: 1px solid gray;
+        }
 
         button {
-            color: green;
             cursor: pointer;
             padding: 5px 15px;
         }
         button:hover {
             cursor: pointer;
             border-radius: 4px;
-            border: 1px solid green;
         }
     }
 }
