--- a/app/app.css
+++ b/app/app.css
@@ -13,7 +13,7 @@ body {
         color-scheme: dark;
     }
 
-    margin: 20px;
+    margin: 20px 40px;
 }
 
 .page {
@@ -27,8 +27,9 @@ body {
     }
 
     main {
+        width: 100%;
         display: flex;
-        align-items: center;
+        align-items: left;
         flex-direction: column;
         justify-content: center;
 
