--- a/app/app.css
+++ b/app/app.css
@@ -29,7 +29,7 @@ body {
     main {
         width: 100%;
         display: flex;
-        align-items: left;
+        align-items: center;
         flex-direction: column;
         justify-content: center;
 
